--- a/sample-service/templates/nodeservice.yaml
+++ b/sample-service/templates/nodeservice.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.clients.node.enabled }}
+{{- if .Values.client.node.enabled }}
 ---
 apiVersion: v1
 kind: Pod
@@ -12,17 +12,28 @@ spec:
   restartPolicy: {{ .Values.restartPolicy }}
   containers:
     - name: node-client
-      image: "{{ .Values.clients.node.image }}:{{ .Values.clients.node.tag | default "latest" }}"
-      imagePullPolicy: {{ .Values.clients.node.pullPolicy }}
+      image: "{{ .Values.client.node.image }}:{{ .Values.client.node.tag | default "latest" }}"
+      imagePullPolicy: {{ .Values.client.node.pullPolicy }}
       env:
         - name: SECRETS_ROUTER_URL
-          value: {{ include "sample-service.secretsRouterURL" . | quote }}
+          value: {{ .Values.secretsRouter.url | quote }}
         - name: TEST_NAMESPACE
-          value: {{ .Release.Namespace | quote }}
+          value: {{ .Values.secretsRouter.namespace | quote }}
+        {{- if .Values.client.node.secrets }}
+        {{- $availableSecrets := list }}
+        {{- range $secretKey, $secretPath := .Values.client.node.secrets }}
+        {{- $availableSecrets = append $availableSecrets $secretKey }}
+        - name: SECRET_{{ $secretKey | upper | replace "-" "_" }}
+          value: {{ $secretPath | quote }}
+        {{- end }}
+        - name: AVAILABLE_SECRETS
+          value: {{ join "," $availableSecrets | quote }}
+        {{- else }}
         - name: TEST_SECRET_NAME
-          value: {{ .Values.clients.node.env.TEST_SECRET_NAME | quote }}
+          value: {{ .Values.testSecret.name | quote }}
         - name: TEST_SECRET_KEY
-          value: {{ .Values.clients.node.env.TEST_SECRET_KEY | quote }}
+          value: "password"
+        {{- end }}
       resources:
         {{- toYaml .Values.resources | nindent 8 }}
   terminationGracePeriodSeconds: 0
