--- a/charts/sample-service/templates/nodeservice.yaml
+++ b/charts/sample-service/templates/nodeservice.yaml
@@ -17,7 +17,7 @@ spec:
       env:
         - name: SECRETS_ROUTER_URL
           value: {{ include "sample-service.secretsRouterURL" . | quote }}
-        - name: TEST_NAMESPACE
+        - name: NAMESPACE
           value: {{ .Release.Namespace | quote }}
         - name: TEST_SECRET_NAME
           value: "sample-secret"
