refactor: add conditional on k8s component

--- a/charts/secrets-router/templates/secrets-components.yaml
+++ b/charts/secrets-router/templates/secrets-components.yaml
@@ -1,7 +1,8 @@
 {{- /* 
-Always create the Kubernetes secret store component.
-It is the default fallback and available in the Release Namespace.
+Conditionally create the Kubernetes secret store component.
+Enabled by default but can be disabled via values.yaml
 */ -}}
+{{- if .Values.secretStores.kubernetes.enabled }}
 apiVersion: dapr.io/v1alpha1
 kind: Component
 metadata:
@@ -16,6 +17,7 @@ spec:
   metadata:
   - name: defaultNamespace
     value: {{ .Release.Namespace | quote }}
+{{- end }}
 
 {{- /* 
 Conditionally create the AWS Secrets Manager component.
