--- a/kubectl-comparison-test.yaml
+++ b/kubectl-comparison-test.yaml
@@ -1,3 +1,32 @@
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: kubectl-comparison-test
+  namespace: default
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: kubectl-comparison-test-secrets
+rules:
+- apiGroups: [""]
+  resources: ["secrets"]
+  verbs: ["get", "list"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: kubectl-comparison-test-secrets
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: kubectl-comparison-test-secrets
+subjects:
+- kind: ServiceAccount
+  name: kubectl-comparison-test
+  namespace: default
+---
 apiVersion: v1
 kind: Pod
 metadata:
@@ -5,6 +34,7 @@ metadata:
   labels:
     app: kubectl-comparison-test
 spec:
+  serviceAccountName: kubectl-comparison-test
   containers:
   - name: test-client
     image: bitnami/kubectl:latest
